--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
         <div class="message">
           You're Playing On <span class="lvl"></span> Level & You Have
           <span class="seconds"></span> Seconds To Type The Word
+          <div class="chooseTheLevel"></div>
+          <div class="menuLevels">
+            <form action="">
+              <div class="Tlevel">
+                <input type="radio" name="lvl" value="Easy" />
+                <label>Easy</label>
+              </div>
+              <div class="Tlevel">
+                <input type="radio" name="lvl" value="Normal" />
+                <label>Normal</label>
+              </div>
+              <div class="Tlevel">
+                <input type="radio" name="lvl" value="Hard" />
+                <label>Hard</label>
+              </div>
+            </form>
+          </div>
         </div>
         <div class="start">Start Playing</div>
         <div class="the-word"></div>
